# tinymetal

./: .clang-format  .gitignore  CMakeLists.txt  README.md  manage.py
cmake/: Info-iOS.plist.in  Info-macOS.plist.in
src/ios/: TMiOSAppDelegate.h  TMiOSMetalView.h  TMiOSMetalView.m  TMiOSSceneDelegate.h  TMiOSSceneDelegate.m  TMiOSViewController.h  TMiOSViewController.m  main.m
src/ios/app/: TMiOSAppDelegate.m  TMiOSViewController.m
src/ios/window/: TMiOSMetalView.h  TMiOSMetalView.m
src/macos/: TMMacAppDelegate.h  TMMacMetalView.h  TMMacMetalView.m  main.m
src/macos/app/: TMMacAppDelegate.m  main.m
src/macos/window/: TMMacMetalView.h  TMMacMetalView.m
src/render/: HelloTriangleShaders.metal  TMRenderer.h  TMRenderer.m
src/shared/: TMRenderer.h  TMRenderer.m  TMShaders.metal
tools/: tiny_mesh_tool.cpp
